--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,73 +1,12 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  padding-bottom: 10px;
-}
-
-.App-link {
-  color: #61dafb;
-}
-.label{           
-  width: 100px;
-  /* margin-left: 300px; */
-  /* float: right; */
-}
-.button{
-  margin-top: 30px;
-  margin-left: 280px;
-}
-.input{
-  margin: 10px;
-  width: 250px;
-}
-.container{
-  width: 600px;
-  margin: auto;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-
-
-
-
-
-
-
-
-
-
 * {
   margin: 0;
   padding: 0;
+}
+html{
+  background: grey;
 }
 
 body {
